apps/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: default
spec:
  rules:
    - host: prowlarr.192.168.1.30.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr-service
                port:
                  number: 9696
  tls:
    - hosts:
        - prowlarr.192.168.1.30.sslip.io
